--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Bootstrap 101 Template</title>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -17,11 +17,69 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="container">
+    <div class="page-header">
+      <h1>Getting Started <small><a href="http://bootstrapdocs.com/v3.0.0/docs/" target="_blank">getBootstrap.com</a></small></h1>
+    </div>
+    <ul>
+      <li>What's included:
+        <ul>
+          <li><a href="https://github.com/twbs/bootstrap/tree/v3.0.0" target="_blank">File Structure</a></li>
+          <li>Fonts
+            <ul>
+              <li><a href="http://fontawesome.io/3.2.1/" target="_blank">Font Awesome</a></li>
+              <li><a href="http://www.google.com/fonts/specimen/Open+Sans" target="_blank">Open Sans</a></li>
+            </ul>
+          </li>
+          <li>CSS</li>
+          <li>LESS</li>
+          <li>JS</li>
+          <li><a href="https://github.com/R5i/r5i.github.io" target="_blank">R5I Project</a></li>
+        </ul>
+      </li>
+      <li><a href="https://github.com/R5i/r5i.github.io/blob/master/gh_pages/examples/theme/index.html" target="_blank">Basic Template</a>
+        <ul>
+          <li>Doctype</li>
+          <li>Meta Character to utf-8</li>
+          <li>X-UA-Compatible</li>
+          <li>*Viewport</li>
+          <li>HTML5 Shiv</li>
+          <li>Respond.JS</li>
+          <li>IE7 Fontawesome Fix</li>
+          <li>IE7 Border-Size Fix</li>
+        </ul>
+      </li>
+      <li>How it works
+        <ul>
+          <li><a href="http://bootstrapdocs.com/v3.0.0/docs/css/#grid" target="_blank">Grid</a></li>
+          <li>Box-sizing</li>
+        </ul>
+      </li>
+      <li><a href="
+http://r5i.github.io/gh_pages/examples/jumbotron/index.html" target="_blank">Coding Specific Elements</a>
+        <ul>
+          <li><a href="http://r5i.github.io/gh_pages/css/index.html#color" target="_blank">Colors &amp; Fonts</a></li>
+          <li><a href="http://r5i.github.io/gh_pages/css/index.html#type" target="_blank">Typography</a></li>
+          <li><a href="http://r5i.github.io/gh_pages/css/index.html#buttons" target="_blank">Buttons</a></li>
+          <li><a href="http://r5i.github.io/gh_pages/components/index.html#glyphicons" target="_blank">Glyph Icons</a></li>
+          <li><a href="http://r5i.github.io/gh_pages/components/index.html#nav-tabs" target="_blank">Tabs</a></li>
+          <li><a href="components/index.html#navbar">Navbar</a></li>
+          <li><a href="components/index.html#list-group" target="_blank">List Group</a></li>
+          <li><a href="http://r5i.github.io/gh_pages/components/index.html#panels" target="_blank">Panels</a></li>
+          <li><a href="http://r5i.github.io/gh_pages/javascript/index.html#modals" target="_blank">Modals</a></li>
+          <li><a href="http://r5i.github.io/gh_pages/javascript/index.html#modals" target="_blank">Modals</a></li>
+          <li><a href="http://r5i.github.io/gh_pages/javascript/index.html#datepicker" target="_blank">Datepicker</a></li>
+          <li><a href="http://r5i.github.io/gh_pages/javascript/index.html#select-boxes" target="_blank">Select Boxes</a></li>
+          <li><a href="http://r5i.github.io/gh_pages/javascript/index.html#checkbox-toggle" target="_blank">Checkbox Toggle</a></li>
+        </ul>
+      </li>
+      <li>Questions?</li>
+    </ul>
+    </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.1/js/bootstrap.min.js"></script>
   </body>
 </html>
